--- a/inc/admin/sass/mitypes-nav-menu.scss
+++ b/inc/admin/sass/mitypes-nav-menu.scss
@@ -78,6 +78,11 @@ Item types > icons
 .mitypes-item-type{}
 .mitypes-item__image{}
 
+#menu-to-edit .mitypes-item__nolink .item-title:before{
+    /* background-color: #fdec00; */
+    background: url(../img/icons/mitypes-nolink.svg) center center / 20px 20px no-repeat transparent;
+}
+
 #menu-to-edit .mitypes-item__image .item-title:before{
     /* background-color: #fdec00; */
     background: url(../img/icons/mitypes-image.svg) center center / 20px 20px no-repeat transparent;
