--- a/inc/admin/css/mitypes-nav-menu.css
+++ b/inc/admin/css/mitypes-nav-menu.css
@@ -31,38 +31,30 @@ Menu edit
 
 /*
 Item types > icons
+#23282d
 */
-/* #23282d */
-#menu-to-edit .wp-item-type__post_type .item-title:before {
-  /* background-color: #007cba; */
+#menu-to-edit .menu-item-page .item-title:before {
   background: url(../img/icons/post_type.svg) center center/20px 20px no-repeat transparent; }
 
 #menu-to-edit .wp-item-type__taxonomy .item-title:before {
-  /* background-color: #23282d; */
   background: url(../img/icons/taxonomy.svg) center center/20px 20px no-repeat transparent; }
 
-#menu-to-edit .wp-item-type__post_type_archive .item-title:before {
-  /* background-color: #23282d; */
+#menu-to-edit .mitypes-item__post_type_archive .item-title:before {
   background: url(../img/icons/post_type_archive.svg) center center/20px 20px no-repeat transparent; }
 
 #menu-to-edit .wp-item-type__custom .item-title:before {
-  /* background-color: #8a8a8a; */
   background: url(../img/icons/custom.svg) center center/20px 20px no-repeat transparent; }
 
 #menu-to-edit .mitypes-item__nolink .item-title:before {
-  /* background-color: #fdec00; */
   background: url(../img/icons/mitypes-nolink.svg) center center/20px 20px no-repeat transparent; }
 
 #menu-to-edit .mitypes-item__image .item-title:before {
-  /* background-color: #fdec00; */
   background: url(../img/icons/mitypes-image.svg) center center/20px 20px no-repeat transparent; }
 
 #menu-to-edit .mitypes-item__heading .item-title:before {
-  /* background-color: #fdec00; */
   background: url(../img/icons/mitypes-heading.svg) center center/20px 20px no-repeat transparent; }
 
 #menu-to-edit .mitypes-item__paragraph .item-title:before {
-  /* background-color: #fdec00; */
   background: url(../img/icons/mitypes-paragraph.svg) center center/20px 20px no-repeat transparent; }
 
 #menu-to-edit .mitypes-item__wpblock .item-title:before {
@@ -82,26 +74,3 @@ Item types > icons
 
 #menu-to-edit .mitypes-item__menu .item-title:before {
   background: url(../img/icons/mitypes-menu.svg) center center/20px 20px no-repeat transparent; }
-
-/*
-Menu item > submenu options
-*/
-#menu-to-edit .acf-menu-item-fields {
-  width: 100%;
-  width: calc(100% - 10px); }
-
-/*
-
-#menu-to-edit .menu-item-bar:after{
-    content:'';
-    display: block;
-    
-    position: absolute;
-    left: 100%;
-
-    width: 20px;
-    height: 20px;
-
-    background-color: #aaa;
-}
-*/
