--- a/inc/admin/css/mitypes-nav-menu.css
+++ b/inc/admin/css/mitypes-nav-menu.css
@@ -25,6 +25,9 @@ Menu edit
 Item types > icons
 #23282d
 */
+#menu-to-edit .mitypes-item-type .item-title:before {
+  background: url(../img/icons/custom.svg) center center/20px 20px no-repeat transparent; }
+
 #menu-to-edit .mitypes-item__post_type .item-title:before {
   background: url(../img/icons/post_type.svg) center center/20px 20px no-repeat transparent; }
 
