--- a/inc/admin/sass/mitypes-nav-menu.scss
+++ b/inc/admin/sass/mitypes-nav-menu.scss
@@ -36,6 +36,10 @@ Item types > icons
 #23282d
 */
 
+#menu-to-edit  .mitypes-item-type .item-title:before{
+    background: url(../img/icons/custom.svg) center center / 20px 20px no-repeat transparent;
+}
+
 #menu-to-edit .mitypes-item__post_type .item-title:before{
     background: url(../img/icons/post_type.svg) center center / 20px 20px no-repeat transparent;
 }
